--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
   <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
-  <img src="images/placeholder-16by9.svg" alt="" />
-  <div>
+  <div class="img-flex">
+    <img src="images/placeholder-16by9.svg" alt="" />
     <img src="images/placeholder-circle.svg" alt="" />
-    <div>
+    <div class="banner">
       <h1>Ultra Super Fighting Force</h1>
       <p>Control giant, fighting, transforming robots and save the world!</p>
       <a class="btn-big">Join USFF</a>
