--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
   <title>Banner</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/main.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
 </head>
 <body>
-  <div class="img-flex">
-    <img src="images/placeholder-16by9.svg" alt="" />
-    <img src="images/placeholder-circle.svg" alt="" />
-    <div class="banner">
+  <div class="banner">
+    <img class="img-flex" src="images/placeholder-16by9.svg" alt="" />
+    <img class="img-flex" src="images/placeholder-circle.svg" alt="" />
+    <div class="banner-content">
       <h1>Ultra Super Fighting Force</h1>
       <p>Control giant, fighting, transforming robots and save the world!</p>
       <a class="btn-big">Join USFF</a>
