--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 </head>
 <body>
   <div class="banner">
-    <img class="img-flex" src="images/placeholder-16by9.svg" alt="" />
-    <img class="img-flex" src="images/placeholder-circle.svg" alt="" />
+    <img class="img-flex" src="images/placeholder-16by9.svg" alt="">
+    <img class="img-flex circle" src="images/placeholder-circle.svg" alt="">
     <div class="banner-content">
       <h1>Ultra Super Fighting Force</h1>
-      <p>Control giant, fighting, transforming robots and save the world!</p>
-      <a class="btn-big">Join USFF</a>
+      <h2>Control giant, fighting, transforming robots and save the world!</h2>
+      <a class="btn-big btn">Join USFF</a>
     </div>
   </div>
 </body>
