--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 <body>
   <div class="banner">
     <img class="img-flex" src="images/placeholder-16by9.svg" alt="">
-    <img class="img-flex circle" src="images/placeholder-circle.svg" alt="">
     <div class="banner-content">
+      <img class="img-flex circle" src="images/placeholder-circle.svg" alt="">
       <h1>Ultra Super Fighting Force</h1>
-      <h2>Control giant, fighting, transforming robots and save the world!</h2>
-      <a class="btn-big btn">Join USFF</a>
+      <p>Control giant, fighting, transforming robots and save the world!</p>
+      <h2 class="btn-big btn">Join USFF</h2>
     </div>
   </div>
 </body>
